--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,5 +30,13 @@ dependencies = [
     'importlib-metadata; python_version<"3.10"'
 ]
 
+[tool.setuptools]
+packages = { find = { where = ["src"] } }
+include-package-data = true
+
+
+[tool.setuptools.package-dir]
+"" = "src"
+
 [project.scripts]
 rcp-run="main:main"
